--- a/day01-friday/1.1_hands_on.md
+++ b/day01-friday/1.1_hands_on.md
@@ -1,14 +1,12 @@
 # 2024 Linux for Bioinformatics Workshop - Day 01
 
-# Navigate the Linux file system
-
 ## Additional resources
 * Complete linux intro ([slides](https://docs.google.com/presentation/d/1wjtThgODtdrX_HO-tALuwGmWwAFwuc5qyjJJjeod-zU/edit?usp=sharing))
 * Linux/Bash basics + conda setup ([slides](https://docs.google.com/presentation/d/14xELo7lDbd-FYuy144ZDK1tV_ZBdBYun_COelrKYWps/edit?usp=sharing), [slides en français](https://docs.google.com/presentation/d/12nda1yGlGqZ9hVcBAwkdw1lw7EPgjXLFdJswJo3mll4/edit?usp=sharing))
 * Another good resource: [Introduction to the UNIX command line](https://ngs-docs.github.io/2021-august-remote-computing/introduction-to-the-unix-command-line.html)
 
-## Hands-on
-
+## Getting used to the command line
+#TODO: needs folder teaching in ~
 ### Your first command
 Each command is a program and most programs use parameters. Tools and parameter(s) are separated by "" (space), that's why using spaces in file names does not work. 
 
@@ -24,7 +22,7 @@ ls
 
 What do you see? _Que voyez-vous ?_
 
-### List file content
+### 1.1.2 List file content
 Try the following commands _Essayez les commandes suivantes_
 
 ```bash
@@ -91,7 +89,134 @@ Please keep in mind that linux is case sensitive, meaning that ```CLEAR``` does 
  _Rappelez-vous que linux est sensible à la casse, ce qui signifie que ```CLEAR``` ne signifie pas la même chose que ```clear```._
 
 ### Navigate between folders
+You can use the tool ```cd``` to move between folders. The command pattern is ```cd <target>```, where ```<target>``` is a relative or absolute path to a file or a folder. 
 
+_Vous pouvez utiliser l'outil  ```cd``` pour vous déplacer entre les dossiers. Le modèle de commande est ```cd <target>```, où ```<target>``` est un chemin relatif ou absolu vers un fichier ou un dossier._
+
+```bash
+# Navigate to our training folder
+cd /home/$USER/teaching
+
+# Navigate one folder up
+cd ..
+
+# Navigate to another folder
+cd Documents
+
+# Navigate to another folder
+cd ../teaching
+
+# Navigate to your home folder
+cd
+
+# Navigate to the folder you have last been in
+cd -
+
+# Learn more about the cd command
+man cd
+```
+
+* How can you navigate to a folder that is two levels up in one command? _Comment naviguer vers un dossier situé deux niveaux plus haut en une seule commande ?_
+
+### Absolute and relative paths
+You can either use absolute or relative pathes in any Linux command. 
+
+_Vous pouvez utiliser des chemins d'accès absolus ou relatifs dans n'importe quelle commande Linux._
+
+```bash
+ls /home/$USER/teaching
+```
+* List the content of the same folder using a relative path. _Listez le contenu du même dossier en utilisant un chemin d'accès relatif._
+
+## Manage files and folders
+#TODO: needs file in ~ that can be copied to teaching
+### Copy files between folders
+```cp``` is a tool that copies data (duplicates). The command has the following pattern 
+
+```cp``` _est un outil qui permet de copier des données (duplication). Le modèle de commande est_ 
+
+```cp <source> <target>```.
+
+```bash
+# Navigate to the teaching folder
+cd /home/$USER/teaching
+# Copy a file to "here"
+cp ../file1.txt .
+# Duplicate a file into same folder with different name
+cp file1.txt file2.txt
+# Learn more about the command cp
+man cp
+```
+### Move files between folders
+```mv``` is a tool that moves and/or renames data (removes source). The command has the following pattern
+
+```mv``` _est un outil qui permet de déplacer et/ou de renommer des données (suppression de la source). La commande se présente comme suit_
+
+```mv <source> <target>```
+
+```bash
+
+# Navigate to the teaching folder
+
+# Move a file to "here"
+mv ../file3.txt .
+
+# Move file2.txt to /home
+
+# Rename file
+mv file3.txt file3_new_name.txt
+
+# Check result
+
+# Learn more about the command mv
+man mv
+```
+
+### Remove files
+```rm``` is a tool that removes data (there's no trash bin like in Windows). The command has the following pattern
+
+_```rm``` est un outil qui supprime les données (il n'y a pas de corbeille comme dans Windows). La commande se présente comme suit_
+
+```rm <file>```
+
+```bash
+# Navigate to the teaching folder
+
+# Remove file
+rm file3_new_name.txt
+
+# Check result
+
+# Remove a file from a different folder
+rm ../file2.txt
+
+# Check results
+
+# Learn more about the command rm
+man rm
+```
+
+### Managing folders
+#TODO: Needs Ecoli folder in ~.
+
+```mkdir``` creates new folders. 
+
+```bash 
+# Go to the teaching folder
+
+# Create a new folder participant and cd to it
+
+# Copy the folder Ecoli from /home into the subfolder participant
+
+# Create another new folder day01 in teaching
+
+# Move the Ecoli folder to day01
+
+# Remove the folder participants
+
+```
+* How can you copy folders with all subfolders and files? Check the documentation. _Comment copier des dossiers avec tous les sous-dossiers et fichiers? Consultez la documentation._
+* Don't worry, we expect errors and learn from them :) You will learn how to read error messages in this training.  _Ne vous inquiétez pas, nous nous attendons à des erreurs et nous apprenons d'elles :) Vous apprendrez à lire les messages d'erreur dans cette formation._
 
 
 
