--- a/day01-friday/1.1_hands_on.md
+++ b/day01-friday/1.1_hands_on.md
@@ -5,7 +5,7 @@
 * Linux/Bash basics + conda setup ([slides](https://docs.google.com/presentation/d/14xELo7lDbd-FYuy144ZDK1tV_ZBdBYun_COelrKYWps/edit?usp=sharing), [slides en français](https://docs.google.com/presentation/d/12nda1yGlGqZ9hVcBAwkdw1lw7EPgjXLFdJswJo3mll4/edit?usp=sharing))
 * Another good resource: [Introduction to the UNIX command line](https://ngs-docs.github.io/2021-august-remote-computing/introduction-to-the-unix-command-line.html)
 
-## Getting used to the command line
+## Navigate the Linux file system
 #TODO: needs folder teaching in ~
 ### Your first command
 Each command is a program and most programs use parameters. Tools and parameter(s) are separated by "" (space), that's why using spaces in file names does not work. 
