Edit file paths

--- a/day01-friday/1.2_hands_on.md
+++ b/day01-friday/1.2_hands_on.md
@@ -55,7 +55,7 @@ grep ">" Ecoli/ref_index/Escher*.fasta
 ```
 
 ### Working with gzipped files
-File sizes in genomics tend to be huge, gigabytes in size. That's why they are zipped in order to safe disk space. Zipped files are compressed files, the content is binary and usually cannot be seen by standard tool. You can inspect gzippped files on the command line without unzipping them, using the following commands
+File sizes in genomics often reach immense proportions, often spanning gigabytes in size. To mitigate storage demands, these files are commonly compressed, typically using the gzip format. Compressed files, such as those generated in genomic analysis, contain binary data and are typically inaccessible to standard text-based tools. However, you can effectively inspect gzipped files directly from the command line without the need to decompress them., using the following commands
 
 ```bash
 # Go to teaching/day01
@@ -63,6 +63,31 @@ File sizes in genomics tend to be huge, gigabytes in size. That's why they are z
 # Execute the following command
 zgrep "^@" Ecoli/SRR16212259.fastq.gz | head
 
+# View the tail of the same file
+
 ```
 * Which information does a `fastq` file contain? What do the `@` represent?
 * Describe the output of the command.
+
+
+### Modify files with Nano
+Text files can be edited on the command line, using the text editor Nano. Nano is a command-line text editor that provides a simple interface for users to create, edit, and modify text files directly within a terminal window. It offers basic functionality similar to other text editors, such as opening, saving, searching, and replacing text. Nano does not have a mouse, text only, this means that you have to use the keys to navigate within the file that is currently open.
+
+Before you try out Nano to open a file, make yourself familiar with the necessary shortcuts:
+1. Ctrl + G: Access the help menu for Nano.
+2. Ctrl + X: Exit Nano (with the option to save changes if any).
+3. Ctrl + O: Save the current file.
+4. Ctrl + W: Search for a specific string in the text.
+
+```bash
+# Navigate to teaching/day01
+
+# Create a new file
+touch my_text_file.txt
+
+# Open the text file with Nano
+nano my_text_file.txt
+```
+
+
+* Write your name, your favorite color and your favorite animal in the text file. Save and exit Nano. Print the content of the file to the command line.
