--- a/day01-friday/1.1_hands_on.md
+++ b/day01-friday/1.1_hands_on.md
@@ -95,7 +95,7 @@ _Vous pouvez utiliser l'outil  ```cd``` pour vous déplacer entre les dossiers. 
 
 ```bash
 # Navigate to our training folder
-cd /home/$USER/teaching
+cd ~/teaching
 
 # Navigate one folder up
 cd ..
@@ -124,7 +124,7 @@ You can either use absolute or relative pathes in any Linux command.
 _Vous pouvez utiliser des chemins d'accès absolus ou relatifs dans n'importe quelle commande Linux._
 
 ```bash
-ls /home/$USER/teaching
+ls ~/teaching
 ```
 * List the content of the same folder using a relative path. _Listez le contenu du même dossier en utilisant un chemin d'accès relatif._
 
@@ -140,13 +140,19 @@ ls /home/$USER/teaching
 ```bash
 # Navigate to the teaching folder
 cd /home/$USER/teaching
+
 # Copy a file to "here"
-cp ../file1.txt .
+cp ../hello_world.txt .
+
+# Verify - How?
+
 # Duplicate a file into same folder with different name
-cp file1.txt file2.txt
+cp hello_world.txt hello_world2.txt
+
 # Learn more about the command cp
 man cp
 ```
+
 ### Move files between folders
 ```mv``` is a tool that moves and/or renames data (removes source). The command has the following pattern
 
@@ -159,14 +165,16 @@ man cp
 # Navigate to the teaching folder
 
 # Move a file to "here"
-mv ../file3.txt .
+mv ../move_me.txt .
 
-# Move file2.txt to /home
+# Move hello_world2.txt to /home
+
+# Verify (without changing directory)
 
 # Rename file
-mv file3.txt file3_new_name.txt
+mv move_me.txt renamed.txt
 
-# Check result
+# Verify
 
 # Learn more about the command mv
 man mv
@@ -183,14 +191,14 @@ _```rm``` est un outil qui supprime les données (il n'y a pas de corbeille comm
 # Navigate to the teaching folder
 
 # Remove file
-rm file3_new_name.txt
+rm renamed.txt
 
-# Check result
+# Verify
 
 # Remove a file from a different folder
-rm ../file2.txt
+rm ../hello_world2.txt
 
-# Check results
+# Verify
 
 # Learn more about the command rm
 man rm
@@ -206,7 +214,7 @@ man rm
 
 # Create a new folder participant and cd to it
 
-# Copy the folder Ecoli from /home into the subfolder participant
+# Copy the folder Ecoli from /teaching/data into the subfolder participant
 
 # Create another new folder day01 in teaching
 
@@ -216,7 +224,11 @@ man rm
 
 ```
 * How can you copy folders with all subfolders and files? Check the documentation. _Comment copier des dossiers avec tous les sous-dossiers et fichiers? Consultez la documentation._
-* Don't worry, we expect errors and learn from them :) You will learn how to read error messages in this training.  _Ne vous inquiétez pas, nous nous attendons à des erreurs et nous apprenons d'elles :) Vous apprendrez à lire les messages d'erreur dans cette formation._
+
+
+Don't worry, we expect errors and learn from them :) You will learn how to read error messages in this training.  
+
+_Nous nous attendons à des erreurs et nous apprenons d'elles :) Vous apprendrez à lire les messages d'erreur dans cette formation._
 
 
 
