--- a/day03-monday/3.2_hands_on_project__orga.md
+++ b/day03-monday/3.2_hands_on_project__orga.md
@@ -1,11 +1,14 @@
 # 2024 Linux for Bioinformatics Workshop - Day 03
 ## Project organization 
+### References
+* [A guide guide to organizing computational projects](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1000424)
 
+### Syllabus
 ### <a name="0"></a>
 | Questions   | Objectives |
 | -- | --               |
-| How can I organize my file systems for a new bioinformatics project  | Create a file systems for a new bioinformatics project
- | How can I document my work | Explain what types of files should go in your `docs`, `data` and `results` directories |
+| How can I organize my file systems for a new bioinformatics project?  | Create a file system for a new bioinformatics project
+ | How can I document my work? | Explain what types of files should go in your `docs`, `data` and `results` directories |
 |  | Use the `history` command and a text editor like `nano` to document your work on your projec
 
 ## Getting your project starting
@@ -13,8 +16,8 @@ Effective project organization is crucial for sequencing projects, but it's ofte
 
 Genomics projects often involve numerous files spread across multiple folders. Each computational analysis adds more files, creating challenges when rerunning analyses. 
 
-> **Note**:
-Strong documentation is essential for doing reproductive research, and fortunately, recording computational experiments is simpler than documenting lab data. Embracing Copy/Paste, using clear file names, and detailing methods will enhance understanding for both you and collaborators.
+> **Note**
+Detailed documentation is essential for doing reproductive research, and fortunately, recording computational experiments is simpler than documenting lab data. Embracing Copy/Paste, using clear file names, and detailing methods will enhance understanding for both you and collaborators.
 
 We will start by creating a directory that we can use for the rest of the workshop. First navigate to your home directory. Then confirm that you are in the correct directory using the pwd command.
 
