Restructure into smaller bits

--- a/day01-friday/1.2_exercices_pratiques.md
+++ b/day01-friday/1.2_exercices_pratiques.md
@@ -1,149 +1,146 @@
 # 2024 Linux for Bioinformatics Workshop - Day 01
 
-## View and modify files
-There is no graphical user interface that allows you to view the content of a file on the command line.
+### Navigate between folders
+You can use the tool ```cd``` to move between folders. The command pattern is ```cd <target>```, where ```<target>``` is a relative or absolute path to a file or a folder. 
 
-### Looking through files and variables
-You can read files without opening them in an explorer by printing (=viewing) them to the terminal. 
-
-_En ligne de commande, vous pouvez lire des fichiers sans les ouvrir dans un explorateur._
-
-``` bash
-# Go to data
-
-# Use less
-less Ecoli/ref_index/Escher*.fasta
-
-# Use cat
-
-# Use head
-
-# Use tail
-
-## to read the file Ecoli/ref_index/Escher*.fasta
-
-```
-
-* Which kind of information does this fasta file contain? _Quel type d'information ce fichier fasta contient-il ?_
-* What are the differences between those command? Use the ```--help``` directive to get further information on the commands. _Quelles sont les différences entre ces commandes ? Utilisez le paramètre directive ```--help``` pour obtenir plus d'informations sur les commandes._
-* What is the complete name of the fasta file? Why did we use ```*``` in the commands above? _Quel est le nom complet du fichier fasta ? Pourquoi avons-nous utilisé ```*``` dans les commandes ci-dessus ?_
-* How can you quit less? _Comment quitter le programme `less`?_
-
-### Text search
-The `grep` command is used to search for specific patterns or text within files. It allows users to specify a search pattern (regular expression) and then scans input files to find lines that match that pattern, subsequently displaying those lines as output. 
-
-_La commande `grep` est utilisée pour chercher des motifs spécifiques ou du texte dans les fichiers. Elle permet aux utilisateurs de spécifier un motif de recherche (regular expression) et analyse ensuite les fichiers d'entrée pour trouver les lignes qui correspondent à ce motif, puis affiche ces lignes en sortie._
-
-Use the `--help` directive to find information on the following tasks.
+_Vous pouvez utiliser l'outil  ```cd``` pour vous déplacer entre les dossiers. Le modèle de commande est ```cd <target>```, où ```<target>``` est un chemin relatif ou absolu vers un fichier ou un dossier._
 
 ```bash
-# Go to day01
+# Navigate to our training folder
+cd ~/teaching
 
-# Grep each line that contains a >
-grep ">" Ecoli/ref_index/Escher*.fasta
+# Navigate one folder up
+cd ..
 
-# Grep every line that does not start with >
+# Navigate to another folder
+cd Documents
 
-# Clear your terminal 
+# Navigate to another folder
+cd ../teaching
 
+# Navigate to your home folder
+cd
+
+# Navigate to the folder you have last been in
+cd -
+
+# Learn more about the cd command
+man cd
 ```
 
-We will learn more about the fasta file format tomorrow. For now, it is sufficient to know that our fasta file contains genomic sequences.
+* How can you navigate to a folder that is two levels up in one command? _Comment naviguer vers un dossier situé deux niveaux plus haut en une seule commande ?_
 
-_Nous en apprendrons plus sur le format de fichier fasta demain. Pour l'instant, il suffit de savoir que notre fichier fasta contient des séquences génomiques._
+### Absolute and relative paths
+You can either use absolute or relative pathes in any Linux command. 
 
-* Can you explain what each of the command prints? _Pouvez-vous expliquer ce que chaque commande imprime?_
-* How many lines containing ">" were found? _Combien de lignes contenant ">" ont été trouvées?_
+_Vous pouvez utiliser des chemins d'accès absolus ou relatifs dans n'importe quelle commande Linux._
 
 ```bash
-# Copy the folder and its content Human from data to day01
+ls ~/teaching
+```
+* List the content of the same folder using a relative path. _Listez le contenu du même dossier en utilisant un chemin d'accès relatif._
 
-# Grep lines containing the symbol / in Human/ERR9874574_summary.txt
+## Manage files and folders
+#TODO: needs file in ~ that can be copied to teaching
+### Copy files between folders
+```cp``` is a tool that copies data (duplicates). The command has the following pattern 
 
+```cp``` _est un outil qui permet de copier des données (duplication). Le modèle de commande est_ 
+
+```cp <source> <target>```.
+
+```bash
+# Navigate to the teaching folder
+cd /home/$USER/teaching
+
+# Copy a file to "here"
+cp ../hello_world.txt .
+
+# Verify - How?
+
+# Duplicate a file into same folder with different name
+cp hello_world.txt hello_world2.txt
+
+# Learn more about the command cp
+man cp
 ```
 
+### Move files between folders
+```mv``` is a tool that moves and/or renames data (removes source). The command has the following pattern
 
-### Working with (g)zipped files
-File sizes in genomics often reach immense proportions, often spanning gigabytes in size. To mitigate storage demands, these files are commonly compressed, typically using the gzip format. Compressed files, such as those generated in genomic analysis, contain binary data and are typically inaccessible to standard text-based tools. However, you can effectively inspect gzipped files directly from the command line without the need to decompress them., using the following commands
+```mv``` _est un outil qui permet de déplacer et/ou de renommer des données (suppression de la source). La commande se présente comme suit_
 
-_En génomique, la taille des fichiers atteint souvent des proportions immenses, dépassant souvent les gigaoctets. Afin d'atténuer les besoins en stockage, ces fichiers sont généralement compressés, généralement à l'aide du format gzip. Les fichiers compressés, tels que ceux générés par l'analyse génomique, contiennent des données binaires et sont généralement inaccessibles aux outils textuels standard. Cependant, tu peux inspecter les fichiers compressés directement à partir de la ligne de commande sans avoir à les décompresser, en utilisant les commandes suivantes_
-
-```bash
-# Go to teaching/day01
-
-# View the zipped file
-cat Ecoli/SRR*.fastq.gz
-
-# Clear your terminal
-
-# View the unzipped file
-zcat Ecoli/SRR*.fastq.gz 
-
-# View the head of the unzipped file
-zcat Ecoli/SRR*.fastq.gz | head
-
-# Execute the following command
-zgrep "^@" Ecoli/SRR16212259.fastq.gz | head
-
-# View the tail
-
-```
-* Which information does a `fastq` file contain? What does the `@` represent? _Quelles sont les informations contenues dans un fichier `fastq` ? Que représente le `@`?_
-* What is the difference in the output between `cat` and `zcat`? _Quelle est la différence entre les résultats de `cat` et de `zcat` ?_
-* Describe the output of the `zgrep` command. _Décrivez le résultat de la commande `zgrep`._
-
-On Linux, zipped files have as file suffix `.gz` oder `.zip`.
-
-_Sous Linux, les fichiers zippés ont pour suffixe `.gz` ou `.zip`._
+```mv <source> <target>```
 
 ```bash
-# Find out the size of the file Ecoli/SRR16212259.fastq.gz
-# Hint: Use ls
 
-# Unzip
-gunzip Ecoli/SRR16212259.fastq.gz
+# Navigate to the teaching folder
 
-# Compare the file size to the unzipped file size
+# Move a file to "here"
+mv ../move_me.txt .
 
-# Zip the file (takes some time)
-gzip Ecoli/SRR16212259.fastq.gz
+# Move hello_world2.txt to /home
+
+# Verify (without changing directory)
+
+# Rename file
+mv move_me.txt renamed.txt
 
 # Verify
 
+# Learn more about the command mv
+man mv
 ```
 
+### Remove files
+```rm``` is a tool that removes data (there's no trash bin like in Windows). The command has the following pattern
 
-### Modify files with Nano
-Nano is a command-line text editor that provides a simple interface for users to create, edit, and modify text files directly within a terminal window. It offers basic functionality similar to other text editors, such as opening, saving, searching, and replacing text. Nano does not have a mouse, text only, this means that you have to use the keys to navigate within the file that is currently open.
+_```rm``` est un outil qui supprime les données (il n'y a pas de corbeille comme dans Windows). La commande se présente comme suit_
 
-_Nano est un éditeur de texte en ligne de commande qui fournit une interface simple permettant aux utilisateurs de créer, d'éditer et de modifier des fichiers texte directement dans une fenêtre de terminal. Il offre des fonctionnalités de base similaires à celles des autres éditeurs de texte, telles que l'ouverture, l'enregistrement, la recherche et le remplacement de texte. Nano n'a pas de souris, il n'y a que du texte, ce qui signifie que vous devez utiliser les touches pour naviguer dans le fichier qui est actuellement ouvert._
-
-Before you try out Nano to open a file, make yourself familiar with the necessary shortcuts:
-_Avant d'utiliser Nano pour ouvrir un fichier, familiarisez-vous avec les raccourcis nécessaires:_
-
-1. Ctrl + G: Access the help menu for Nano in Nano.
-2. Ctrl + X: Exit Nano (with the option to save changes if any).
-4. Ctrl + W: Search for a specific string in the text.
-5. Alt + 6: Copy the selected text.
-6. Ctrl + U: Paste the copied text.
-7. Ctrl + K: Cut the current line of text.
-8. Alt + U: Undo the previous command.
-9. Alt + E: Redo the previous command.
-
+```rm <file>```
 
 ```bash
-# Navigate to teaching/day01
+# Navigate to the teaching folder
 
-# Create a new file
-touch my_text_file.txt
+# Remove file
+rm renamed.txt
 
-# Open the text file with Nano
-nano my_text_file.txt
+# Verify
+
+# Remove a file from a different folder
+rm ../hello_world2.txt
+
+# Verify
+
+# Learn more about the command rm
+man rm
 ```
 
+### Managing folders
+#TODO: Needs Ecoli folder in ~.
 
-* Type in some text, such as "Hello World!". Save the file and exit Nano. Show the content of the file in the command line. _Tapez un texte, par exemple "Hello World !". Enregistrez le fichier et quittez Nano. Affichez le contenu du fichier dans la ligne de commande._
+```mkdir``` creates new folders. 
 
-* Edit the existing file, navigate to a specific line and make changes to the text, such as adding your favorite animal to the second line. Save and exit. Verify by showing the content of the file in the command line. _Modifiez le fichier existant, accédez à une ligne et apportez des modifications au texte, par exemple en ajoutant votre animal préféré à la deuxième ligne. Enregistrez et quittez. Vérifiez en affichant le contenu du fichier dans la ligne de commande._
+```bash 
+# Go to the teaching folder
 
-* Edit the existing file, by copying your favorite animal and pasting it to the next line. Save and verify. _Modifiez le fichier existant en copiant votre animal préféré et en le collant à la ligne suivante. Enregistrez et vérifiez._
+# Create a new folder participant and cd to it
+
+# Copy the folder Ecoli from /teaching/data into the subfolder participant
+
+# Create another new folder day01 in teaching
+
+# Move the Ecoli folder to day01
+
+# Remove the folder participants
+
+```
+* How can you copy folders with all subfolders and files? Check the documentation. _Comment copier des dossiers avec tous les sous-dossiers et fichiers? Consultez la documentation._
+
+
+Don't worry, we expect errors and learn from them :) You will learn how to read error messages in this training.  
+
+_Nous nous attendons à des erreurs et nous apprenons d'elles :) Vous apprendrez à lire les messages d'erreur dans cette formation._
+
+
+
