--- a/day01-friday/1.0_exercises_pratiques.md
+++ b/day01-friday/1.0_exercises_pratiques.md
@@ -5,9 +5,7 @@
 * Linux/Bash basics + conda setup ([slides](https://docs.google.com/presentation/d/14xELo7lDbd-FYuy144ZDK1tV_ZBdBYun_COelrKYWps/edit?usp=sharing), [slides en français](https://docs.google.com/presentation/d/12nda1yGlGqZ9hVcBAwkdw1lw7EPgjXLFdJswJo3mll4/edit?usp=sharing))
 * Another good resource: [Introduction to the UNIX command line](https://ngs-docs.github.io/2021-august-remote-computing/introduction-to-the-unix-command-line.html)
 
-## Navigate the Linux file system
-#TODO: needs folder teaching in ~
-### Your first command
+## Your first command
 Each command is a program and most programs use parameters. Tools and parameter(s) are separated by "" (space), that's why using spaces in file names does not work. 
 
 _Chaque commande est un programme et la plupart des programmes utilisent des paramètres. Les outils et les paramètres sont séparés par des "" (espaces), c'est pourquoi l'utilisation d'espaces dans les noms de fichiers ne fonctionne pas._
