--- a/day01-friday/1.2_exercices_pratiques.md
+++ b/day01-friday/1.2_exercices_pratiques.md
@@ -36,12 +36,16 @@ You can either use absolute or relative pathes in any Linux command.
 _Vous pouvez utiliser des chemins d'accès absolus ou relatifs dans n'importe quelle commande Linux._
 
 ```bash
+# List the content
 ls ~/teaching
+
+# List the content of another folder
+ls ~/teaching/data
 ```
-* List the content of the same folder using a relative path. _Listez le contenu du même dossier en utilisant un chemin d'accès relatif._
+
+* List the content of the same folder(s) using a relative path. _Listez le contenu des même dossiers en utilisant un chemin d'accès relatif._
 
 ## Manage files and folders
-#TODO: needs file in ~ that can be copied to teaching
 ### Copy files between folders
 ```cp``` is a tool that copies data (duplicates). The command has the following pattern 
 
@@ -108,7 +112,7 @@ rm renamed.txt
 # Verify
 
 # Remove a file from a different folder
-rm ../hello_world2.txt
+rm ../remove_me.txt
 
 # Verify
 
@@ -117,8 +121,6 @@ man rm
 ```
 
 ### Managing folders
-#TODO: Needs Ecoli folder in ~.
-
 ```mkdir``` creates new folders. 
 
 ```bash 
@@ -126,16 +128,20 @@ man rm
 
 # Create a new folder participant and cd to it
 
+# Copy the hello_world.txt file
+
 # Copy the folder Ecoli from /teaching/data into the subfolder participant
+
+# Go one level up
 
 # Create another new folder day01 in teaching
 
-# Move the Ecoli folder to day01
+# Move the Ecoli folder in particpant to day01
 
-# Remove the folder participants
+# Remove the folder participant
 
 ```
-* How can you copy folders with all subfolders and files? Check the documentation. _Comment copier des dossiers avec tous les sous-dossiers et fichiers? Consultez la documentation._
+* How can you copy folders with all subfolders and files? Check the documentation of `cp`. _Comment copier des dossiers avec tous les sous-dossiers et fichiers? Consultez la documentation._
 
 
 Don't worry, we expect errors and learn from them :) You will learn how to read error messages in this training.  
