--- a/day03-monday/3.1_exercices_pratiques.md
+++ b/day03-monday/3.1_exercices_pratiques.md
@@ -21,8 +21,8 @@ _Les données sont sauvegardées dans un fichier `csv`. Chaque ligne contient de
 | sample  | The name of the sample the gene expression was measured in |
 | expression |  	The value of the gene expression |
 | organism |  	The organism/species |
-| age | The age of the mouse (all mice were 8 weeks here) |
-| sex | The sex of the mouse |
+| age | The age of the animal |
+| sex | The sex of the animal |
 | infection | The infection state of the mouse, i.e. infected with Influenza A or not infected. |
 | strain | The Influenza A strain; C57BL/6 in all cases. |
 | time | The duration of the infection (in days). |
@@ -45,21 +45,19 @@ The `cut` command is a tool used to extract specific columns from text files, in
 _La commande `cut` est un outil utilisé pour extraire des colonnes spécifiques de fichiers texte, y compris les fichiers `csv`. Elle peut être particulièrement pratique pour accéder aux colonnes par leur position numérique dans le fichier. En spécifiant les numéros de colonnes désirés avec l'option `-f`, séparés par des virgules, `cut` permet d'extraire et de manipuler des données basées sur des colonnes à partir de fichiers `csv`._
 
 ```bash
+# Create a new folder day03 in teaching
+
 # Go to data 
 
 # Download the following file
 wget https://github.com/UCLouvain-CBIO/WSBIM1207/blob/master/data/rnaseq.csv
 
-# Copy the file to day02
+# Copy the file to day03
 
-```
-* Can you think of reasons why it might be useful to work on a copy a file, not the original one? _Pouvez-vous imaginer des raisons pour lesquelles il peut être utile de travailler sur une copie d'un fichier, et non sur le fichier original ?_
-
-```bash
 # Check the documentation
 man cut 
 
-# View the column header of the file (the column names)
+# View the column header of the file (the column names, the first row), Hint: use head
 
 # View columns 1, 2 and 3
 cut -d "," -f 1-3
@@ -77,13 +75,13 @@ _Vous pouvez également utiliser `grep` et `cut` ensemble pour sélectionner les
 # View only female samples
 grep "Female" rnaseq.csv | less
 
-# View the infection status of all female mice
+# View the infection status of all female samples
 grep "Female" rnaseq.csv | cut -d "," -f 6,7 | less
 
 # Format the output for better readbility
 grep "Female" rnaseq.csv | cut -d "," -f 6,7 | column -ts "," | less
 
-# View the gene, sample, expression, sec and infection status of all male samples
+# View the gene, sample, expression, sex and infection status of all male samples
 
 # Format the output for better readability
 
@@ -99,22 +97,20 @@ _La commande `sort` est un outil utilisé pour trier des lignes de texte par ord
 man sort
 
 # Sort all genes by their gene expression values
-cut -f "," -f 1,3 rnaseq.csv | sort -k 2 -nt "," | less
+cut -d "," -f 1,3 rnaseq.csv | sort -k 2 -nt "," | less
 
 # Sort all genes by their gene expression values, nice view
-cut -f "," -f 1,3 rnaseq.csv | column -ts "," | sort -k 2 -n | less
+cut -d "," -f 1,3 rnaseq.csv | column -ts "," | sort -k 2 -n | less
 
-# Include the sample name
-cut -f "," -f 1-3 rnaseq.csv | sort -k 3 -t ","| less
 ```
 
 * What is the difference between the first and the second command? Is the output the same? _Quelle est la différence entre la première et la deuxième commande ? Le résultat est-il le même ?_
 * What is the purpose of the parameter `-k` and `-n` and `-t` from `sort`? Why does the value of `-k` change between command 1 and 3 although the sorting is based on the gene expression value in both cases? Check the documentation. _A quoi servent les paramètres `-k`, `-n` et `-t` de `sort` ? Pourquoi la valeur de `-k` change-t-elle entre les commandes 1 et 3 alors que le tri est basé sur la valeur de l'expression du gène dans les deux cas ? Consultez la documentation._
 
 ```bash
-# Sort all genes with sample name by their gene expression values, in reverse order
+# Sort all genes with their sample name by their gene expression values, in reverse order
 
-# Sort genes from female samples by their gene expression value, include 
+# Sort genes from female samples by their gene expression value, include sample name  
 
 ```
 
@@ -130,7 +126,7 @@ man uniq
 # View column names
 
 # Find genes names
-cut -d "," -f 1 rnaseq.csv | sort -n | uniq | less
+cut -d "," -f 1 rnaseq.csv | sort | uniq | less
 ```
 
 `uniq` needs sorted input in order to properly omit repeated lines. Please be aware that the command above will not throw an error message when `sort` was not used before `uniq`. `uniq` has a neat feature that counts the occurences of each unique key.
@@ -159,12 +155,10 @@ Instead of printing it to the terminal, you can save the output of a command in 
 
 ```bash
 # Save organism name in a new file
-cut -d "," -f 4 rnaseq.csv | sort -n | uniq -c > organism_name.txt
+cut -d "," -f 4 rnaseq.csv | sort | uniq -c > organism_name.txt
 
 # Verify
 cat organism_name.txt
-
-# Save gene counts in a new file
 
 # Verify
 
