--- a/day03-monday/3.1_exercices_pratiques.md
+++ b/day03-monday/3.1_exercices_pratiques.md
@@ -60,7 +60,7 @@ man cut
 # View the column header of the file (the column names, the first row), Hint: use head
 
 # View columns 1, 2 and 3
-cut -d "," -f 1-3
+cut -d "," -f 1-3 rnaseq.csv
 
 # View columns 1, 3 and 10
 
