--- a/day03-monday/3.2_exercices_pratiques.md
+++ b/day03-monday/3.2_exercices_pratiques.md
@@ -46,7 +46,7 @@ If your script is in a different directory write the relative or absolute path i
 
 _Si votre script se trouve dans un autre répertoire, indiquez le chemin relatif ou absolu devant celui-ci :_
 
-/home/$USER/teaching/day03/scripts/HelloWorld.sh
+```bash /home/$USER/teaching/day03/scripts/HelloWorld.sh ```
 
 ---
 
