--- a/day03-monday/3.2_exercices_pratiques.md
+++ b/day03-monday/3.2_exercices_pratiques.md
@@ -38,15 +38,15 @@ If your script lies within your current working directory you can run it using:
 
 _Si votre script se trouve dans votre répertoire de travail actuel, vous pouvez l'exécuter en utilisant :_
 
-./HelloWorld.sh
+```./HelloWorld.sh```
 or with:
-bash HelloWorld.sh
+```bash HelloWorld.sh```
 
 If your script is in a different directory write the relative or absolute path in front of it:
 
 _Si votre script se trouve dans un autre répertoire, indiquez le chemin relatif ou absolu devant celui-ci :_
 
-```bash /home/$USER/teaching/day03/scripts/HelloWorld.sh ```
+```/home/$USER/teaching/day03/scripts/HelloWorld.sh ```
 
 ---
 
