--- a/day03-monday/3.2_exercices_pratiques.md
+++ b/day03-monday/3.2_exercices_pratiques.md
@@ -92,3 +92,31 @@ Create a forth variable, you can decide on the name and content. Add the new var
 _Modifiez maintenant l'ordre du nom, du dessert et de l'institut. Exécutez à nouveau le script. Que se passe-t-il ?_
 
 _Créez une quatrième variable, vous pouvez décider du nom et du contenu. Ajoutez la nouvelle variable à votre fonction et utilisez ``echo`` pour imprimer un message sur le terminal._
+
+### if elif else
+Now lets write a script in which we use an if elif else statement. Use ```read``` to make the user (you) enter a number. Then use the if elif else statement to check if your number is greater, smaller or equal to 10. Use ```echo``` to tell the user that the number greater, smaller or equal to 10.
+
+_Nous allons maintenant écrire un script dans lequel nous utiliserons une instruction if elif else. Utilisez ``read`` pour que l'utilisateur (vous) entre un nombre. Utilisez ensuite l'instruction if elif else pour vérifier si votre nombre est supérieur, inférieur ou égal à 10. Utilisez ``echo`` pour indiquer à l'utilisateur que le nombre est supérieur, inférieur ou égal à 10._
+
+For numerical comparisons in Bash, one should use  ```-gt ``` (greater than),  ```-lt ``` (less than),  ```-g ```e (greater than or equal to),  ```-le ``` (less than or equal to),  ```-eq ``` (equal to), or - ```ne ``` (not equal to) within square brackets  ```[ ] ``` or double parentheses  ```(( )) ```.
+
+_Pour les comparaisons numériques dans Bash, il faut utiliser ``-gt `` (plus grand que), ``-lt `` (moins grand que), ``-g ``e (plus grand ou égal à), ``-le `` (moins grand ou égal à), ``-eq `` (égal à), ou - ``ne `` (non égal à) entre crochets ``[ ] `` ou entre doubles parenthèses ``(( )) ```._
+
+
+
+```bash
+#!/bin/bash
+
+# This script demonstrates a typical if, elif, else structure
+# where the user is asked to enter a number
+
+# Prompt the user to enter a number
+
+
+# Check if the number is greater than 10
+
+# Check if the number is less than 10
+
+# If the number is not greater than or less than 10, it must be equal to 10
+
+```
