--- a/day03-monday/3.2_exercices_pratiques.md
+++ b/day03-monday/3.2_exercices_pratiques.md
@@ -100,7 +100,7 @@ _Nous allons maintenant écrire un script dans lequel nous utiliserons une instr
 
 For numerical comparisons in Bash, one should use  ```-gt ``` (greater than),  ```-lt ``` (less than),  ```-g ```e (greater than or equal to),  ```-le ``` (less than or equal to),  ```-eq ``` (equal to), or - ```ne ``` (not equal to) within square brackets  ```[ ] ``` or double parentheses  ```(( )) ```.
 
-_Pour les comparaisons numériques dans Bash, il faut utiliser ``-gt `` (plus grand que), ``-lt `` (moins grand que), ``-g ``e (plus grand ou égal à), ``-le `` (moins grand ou égal à), ``-eq `` (égal à), ou - ``ne `` (non égal à) entre crochets ``[ ] `` ou entre doubles parenthèses ``(( )) ```._
+_Pour les comparaisons numériques dans Bash, il faut utiliser ``-gt `` (plus grand que), ``-lt `` (moins grand que), ``-g ``e (plus grand ou égal à), ``-le `` (moins grand ou égal à), ``-eq `` (égal à), ou - ``ne `` (non égal à) entre crochets ``[ ] `` ou entre doubles parenthèses ```(( )) ```._
 
 
 
