--- a/day04-tuesday/4.1_exercices_pratiques.md
+++ b/day04-tuesday/4.1_exercices_pratiques.md
@@ -25,8 +25,7 @@ conda deactivate orkshop
 fastqc
 
 ```
-* Why can't you use `fastqc` again on the second try?
-
+* Why can't you use `fastqc` again on the second try? _Pourquoi ne pouvez-vous pas utiliser `fastqc` au deuxième essai ?_
 
 ``` bash
 # Create a new environment called qc and activate it
@@ -51,3 +50,5 @@ conda remove nanoplot
 # List all available environment
 conda env list
 ```
+
+* Qu'est-ce que c'est NanoPlot?
