--- a/day04-tuesday/4.1_exercices_pratiques.md
+++ b/day04-tuesday/4.1_exercices_pratiques.md
@@ -4,11 +4,11 @@
 ## for loop - basename
 Under teaching create a folder for day04. Create the folder txt_folder inside of day04. For the following loop exercise we need multiple txt files. Go to the txt_folder and create at least 4 txt files with different names. 
 
-Use Nano to create a script called for_basename.sh with the following content. Adjust the path of the in_dir variable so it leads to your current working directory. Use a absolute path.
+Use Nano to create a script called for_basename.sh with the following content. Adjust the path of the in_dir variable so it leads to your current working directory txt_folder. Use a absolute path.
 
 _Sous teaching, créez un dossier pour le jour04. Créez le dossier txt_folder dans le dossier day04. Pour l'exercice en boucle suivant, nous avons besoin de plusieurs fichiers txt. Allez dans le dossier txt_folder et créez au moins 4 fichiers txt avec des noms différents._
 
-_Utilisez Nano pour créer un script appelé for_basename.sh avec le contenu suivant. Ajustez le chemin de la variable in_dir pour qu'il mène à votre répertoire de travail actuel. Utilisez un chemin absolu._
+_Utilisez Nano pour créer un script appelé for_basename.sh avec le contenu suivant. Ajustez le chemin de la variable in_dir pour qu'il mène à votre répertoire de travail actuel txt_folder. Utilisez un chemin absolu._
 
 ```bash
 #!/bin/bash
